@@ -1,6 +1,8 @@
 Revision history for Perl module WWW::Mechanize::Cached
 
 {{$NEXT}}
+    - Support working with CHI automatically if Cache::FileCache is not installed
+    - GH #6 (Kent Fredric)
 
 1.43 2013-07-26 23:04:40 America/Toronto
     - Reformatted Changes file as per CPAN::Changes::Spec (Neil Bowers)
